<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CustomerInfoActivity">

    <TextView
        android:id="@+id/teaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="First Name"/>

    <EditText
        android:id="@+id/firstNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/teaText"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="First Name"/>

    <TextView
        android:id="@+id/lastNameLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/firstNameField"
        android:text="Last Name"/>

    <EditText
        android:id="@+id/lastNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/lastNameLabelTextView"
        android:layout_toRightOf="@+id/lastNameLabelTextView"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Last Name"/>

    <TextView
        android:id="@+id/emailLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lastNameField"
        android:text="Email"/>

    <EditText
        android:id="@+id/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lastNameField"
        android:layout_alignLeft="@+id/firstNameField"
        android:layout_alignRight="@+id/lastNameField"
        android:layout_alignStart="@+id/firstNameField"
        android:layout_alignTop="@+id/emailLabelTextView"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="Email"/>

    <TextView
        android:id="@+id/customerIdLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/emailField"
        android:text="Customer Id"/>

    <TextView
        android:id="@+id/customerIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailField"
        android:layout_centerHorizontal="true"
        android:text="Customer Id"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/vipYearStaticTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/customerIdTextView"
        android:text="VIP Years"/>

    <TextView
        android:id="@+id/vipYearsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/customerIdTextView"
        android:layout_alignStart="@+id/customerIdTextView"
        android:layout_below="@+id/customerIdTextView"
        android:text="years"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/rewardBalanceStaticTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/vipYearStaticTextView"
        android:text="Reward Balance"/>

    <TextView
        android:id="@+id/rewardBalanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/vipYearsTextView"
        android:layout_alignStart="@+id/vipYearsTextView"
        android:layout_alignTop="@+id/rewardBalanceStaticTextView"
        android:text="rewardBalance"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Error Message Area"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/saveCustomerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rewardBalanceTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="Save Customer"/>

</RelativeLayout>
